fix(content): make @nx/devkit package optional

--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -40,6 +40,9 @@
     "sharp": "^0.33.5"
   },
   "peerDependenciesMeta": {
+    "@nx/devkit": {
+      "optional": true
+    },
     "satori": {
       "optional": true
     },
